<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="slim_player">Slim Player</string>
    <string name="expanded_player">Expanded Player</string>
    <string name="aa_albums">Albums</string>
    <string name="aa_artists">Artists</string>
    <string name="aa_by">by</string>
    <string name="aa_playlists">Playlists</string>
    <string name="aa_podcasts">Podcasts</string>
    <string name="dlg_no">No</string>
    <string name="dlg_text">"All cookies will be deleted.\nOn service restarting you\'ll need to log in again.\nContinue?"</string>
    <string name="dlg_title">Confirmation</string>
    <string name="dlg_yes">Yes</string>
    <string name="expand_button_title">Advanced</string>
    <string name="menu_actions">Triggered Actions</string>
    <string name="menu_amoled">Amoled Theme</string>
    <string name="menu_amoled_sum">⚠️ Requires a manual restart</string>
    <string name="menu_andauto">Controls + Android Auto</string>
    <string name="menu_ap_disabled">Disabled</string>
    <string name="menu_ap_mode">AutoPlay Mode</string>
    <string name="menu_ap_onetime">One time at start</string>
    <string name="menu_ap_permanent">Permanent</string>
    <string name="menu_as_5min">5 minutes</string>
    <string name="menu_as_10min">10 minutes</string>
    <string name="menu_as_15min">15 minutes</string>
    <string name="menu_as_1h">1 hour</string>
    <string name="menu_as_1h30m">1 hour 30 min</string>
    <string name="menu_as_20min">20 minutes</string>
    <string name="menu_as_2h">2 hours</string>
    <string name="menu_as_30min">30 minutes</string>
    <string name="menu_as_3h">3 hours</string>
    <string name="menu_as_45min">45 minutes</string>
    <string name="menu_as_disabled">Disabled</string>
    <string name="menu_autoshut">Auto Shutdown after inactivity</string>
    <string name="menu_autosleep">Playback Sleep timer</string>
    <string name="menu_btap">Play when Bluetooth is Connected</string>
    <string name="menu_btas">Stop when Bluetooth is Disconnected</string>
    <string name="menu_cat_gui">Appearance</string>
    <string name="menu_cat_player">Player Settings</string>
    <string name="menu_cat_system">System Settings</string>
    <string name="menu_cat_service">Service Control</string>
    <string name="menu_clearcache">Empty Cache</string>
    <string name="menu_clearcachesum">Useful if you notice slowdowns in navigation</string>
    <string name="menu_cleardata">Empty Cache and Login Data</string>
    <string name="menu_cleardatasum">Clear all data and log out</string>
    <string name="menu_closenowplay">Always Close “Now Playing” View</string>
    <string name="menu_endtext">⚠️ Changes to the above options require manual service restart</string>
    <string name="menu_forceen">Force English Browser</string>
    <string name="menu_forceensum">Could be useful for banned countries</string>
    <string name="menu_forceportrait">Force portrait orientation</string>
    <string name="menu_gm_bigwindow">Wide Window</string>
    <string name="menu_gm_csshack">️Mobile CSS+JS</string>
    <string name="menu_gm_none">None</string>
    <string name="menu_guimode">GUI Hack Mode</string>
    <string name="menu_hpap">Play when Headphones are Plugged in</string>
    <string name="menu_hpas">Stop when Headphones are Unplugged</string>
    <string name="menu_swipestop">Stop service by swiping in recent apps list</string>
    <string name="menu_takecontrol">Take Player Control</string>
    <string name="srv_notif">You can disable this notification by long-pressing on it</string>
    <string name="srv_title">Playing in background</string>
    <string name="txt_adblock">Blocking Ads</string>
    <string name="menu_adblock_mode">Ad Blocker Mode</string>
    <string name="menu_adblock_legacy">Legacy (Connection-Verified)</string>
    <string name="menu_adblock_instant">Instant (In-Memory)</string>
    <string name="menu_adblock_dynamic">Dynamic Blocklist (In-Memory)</string>
    <string name="txt_closelib">Close Library</string>
    <string name="txt_loadingpage">Loading...</string>
    <string name="txt_loadprevious">Going Back...</string>
    <string name="txt_notloaded">Start the service first and wait for the player to load!</string>
    <string name="txt_pressagain">Press again to send in background</string>
    <string name="txt_reload">Reloading...</string>
    <string name="txt_servicenr">Service Not Running</string>
    <string name="txt_startservice">Start Service</string>
    <string name="txt_unlock">Player Unlocking</string>
    <string name="txt_waitplayer">...Wating for Player...</string>
    <string name="txt_notrack">No Track</string>
    <string name="txt_noartist">No Artist</string>
</resources>